--- a/publications/_posts/2025-10-6-vir.markdown
+++ b/publications/_posts/2025-10-6-vir.markdown
@@ -2,6 +2,7 @@
 title:  "Retrofitting Control Flow Graphs in LLVM IR for Auto Vectorization"
 date:   2025-10-6
 authors: "<strong>Shihan Fang</strong>, Wenxin Zheng"
+categories: [publications]
 # venue: "NeurIPS 2025"
 # bib: |
 #   @article{Doe2021,
