--- a/award/_posts/2024-12-01-ruiyuan.markdown
+++ b/award/_posts/2024-12-01-ruiyuan.markdown
@@ -1,5 +1,5 @@
 ---
-title: "2024 Ruiyuan - Hongshan Talent Development Fund (Top 5 persons in SJTU Zhiyuan College)"
+title: "2024 Ruiyuan - Hongshan Talent Development Fund (Top 5 in SJTU Zhiyuan College)"
 categories: [awards]
 type: scholarship
 ---
