--- a/award/_posts/2024-11-01-zhiyuan.markdown
+++ b/award/_posts/2024-11-01-zhiyuan.markdown
@@ -1,5 +1,5 @@
 ---
-title: "2022, 2023, 2024 Zhiyuan Honorary Scholarship (Top 2% in Shanghai Jiao Tong University)"
+title: "2022, 2023, 2024, 2025 Zhiyuan Honorary Scholarship (Top 2% in Shanghai Jiao Tong University)"
 categories: [awards]
 type: scholarship
 ---
