--- a/award/_posts/2026-2-04-cgo-src.markdown
+++ b/award/_posts/2026-2-04-cgo-src.markdown
@@ -3,5 +3,7 @@ title: "2026 Gold Award, The ACM Student Research Competition (SRC) at CGO"
 categories: [awards]
 type: competition
 links:
-  - ["Official Page", "https://2026.cgo.org/track/cgo-2026-student-research-competition?"]
+  - ["official page", "https://2026.cgo.org/track/cgo-2026-student-research-competition?"]
+  - ["poster", "https://fangtangtang.github.io/uploads/cgo26-src-poster.pdf"]
+  - ["slides", "https://fangtangtang.github.io/uploads/cgo26-src-slides.pdf"]
 ---
